--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -13,7 +13,6 @@ knitr::opts_chunk$set(echo = TRUE,fig.width=5, fig.height=5,fig.align = "center"
 ```
 
 
-
 ```{r, echo=FALSE, include=FALSE, warning=FALSE, message=FALSE}
 ##libraries, globals
 
@@ -23,20 +22,38 @@ library(grid)
 library(dplyr)
 library(gridExtra)
 library(lme4)
-paper_theme <- theme(#legend.title=element_text( size = 14, face="plain"), 
-                     legend.text=element_text(size = 12),
-                     legend.title=element_blank(),
-                     #legend.text=element_blank(),
 
-                     axis.title.x = element_text(size=0),
-                     axis.text.x=element_text(colour="black", size = 12), 
-                     axis.title.y = element_text(size = 14, vjust = 1),
-                     axis.text.y  = element_text(size = 12),
-                     panel.grid.major = element_blank(), 
-                     panel.grid.minor = element_blank(), 
-                     panel.background = element_blank(),
-                     axis.line.x = element_line(colour = "black"), 
-                     axis.line.y = element_line(colour = "black"))
+paper_theme <- theme(
+  panel.grid.major = element_blank(), 
+  panel.grid.minor = element_blank(), 
+  panel.background = element_blank(),
+  axis.title.x = element_text(size=18),
+  axis.text.x=element_text(colour="black", 
+                           size = 14), 
+  axis.title.y = element_text(size = 18, vjust = 1),
+  axis.text.y  = element_text(size = 14),
+  axis.line.x = element_line(colour = "black"), 
+  axis.line.y = element_line(colour = "black"),
+  legend.text=element_text(size=16),
+  strip.text=element_blank(),
+          strip.background = element_blank())
+
+paper_theme_2 <- theme_light() + theme(axis.title.x = element_text(size=18),
+  axis.text.x=element_text(colour="black", 
+                           size = 14), 
+  axis.title.y = element_text(size = 18, vjust = 1),
+  axis.text.y  = element_text(size = 14))
+
+paper_theme_3 <- theme( axis.title.x = element_text(size=18),
+  axis.text.x=element_text(colour="black", 
+                           size = 14), 
+  axis.title.y = element_text(size = 18, vjust = 1),
+  axis.text.y  = element_text(size = 14),
+  strip.text=element_text(size=16),
+  axis.line.x = element_line(colour = "black"), 
+  axis.line.y = element_line(colour = "black"),
+  legend.title=element_text(size=18),
+  legend.text=element_text(size=16))  
 
 
 binomial_smooth <- function(...) {
@@ -44,18 +61,28 @@ binomial_smooth <- function(...) {
 }
 ```
 
+```{r, include=FALSE, echo=FALSE, warning=FALSE,message=FALSE}
 
-```{r, include=FALSE}
-
-data.resp.loc <- read.csv("data/dot_gaze.csv", sep="\t")
-data.tracker <- read.csv("data/tracker_data.csv", sep="\t")
-data.tracker$trial_id <- data.tracker$trial_id - 1
-data.resp.loc$trial_id <- data.resp.loc$trial_id - 1
-
-data.resp.loc$id <- seq.int(1, nrow(data.resp.loc))
+data.estimation.resp.loc <- read.csv("data/estimation_dot_gaze.csv", sep="\t")
+data.estimation.tracker <- read.csv("data/estimation_tracker_data.csv", sep="\t")
+data.estimation.tracker$trial_id <- data.estimation.tracker$trial_id - 1
+data.estimation.resp.loc$trial_id <- data.estimation.resp.loc$trial_id - 1
 
 
-data.resp <- data.resp.loc %>%
+data.estimation.resp.loc <- data.estimation.resp.loc %>%
+                filter(belowX >= 0)
+
+trials <- (unique(data.estimation.resp.loc$trial_id))
+
+data.estimation.tracker <- data.estimation.tracker %>%
+                group_by(trial_id) %>%
+                filter(trial_id %in% trials)
+
+
+data.estimation.resp.loc$id <- seq.int(1, nrow(data.estimation.resp.loc))
+
+
+data.estimation.resp <- data.estimation.resp.loc %>%
             group_by(Trial, Time, pid) %>%
             top_n(n=1, wt=id) %>%
             group_by(Dots_Counted, Dots_Shown, pid) %>%
@@ -63,10 +90,11 @@ data.resp <- data.resp.loc %>%
             mutate(abs_err = abs(err)) %>%
             mutate(over = 1*(Dots_Counted > Dots_Shown)) %>%
             mutate(under = 1*(Dots_Shown > Dots_Counted)) %>%
-            mutate(corr= 1*(Dots_Counted == Dots_Shown))
+            mutate(corr= 1*(Dots_Counted == Dots_Shown)) %>%
+            filter(Dots_Counted < 201)
 
 
-data.tracker <- data.tracker %>%
+data.estimation.tracker <- data.estimation.tracker %>%
                   filter(ValidityLeft == 0 & ValidityRight == 0) %>%
 
                 mutate(av_x = (GazePointXLeft +GazePointXRight)/2) %>%
@@ -74,162 +102,153 @@ data.tracker <- data.tracker %>%
                 group_by(trial_id) %>%
                 mutate(Time = round(max(TimeStamp)/100)/10)
 
-data.tracker$id <- seq.int(1,nrow(data.tracker))
+data.estimation.tracker$id <- seq.int(1,nrow(data.estimation.tracker))
 
-
-
+data.estimation.resp.old <- cbind(data.estimation.resp)
+data.estimation.resp.loc$Time <- as.factor(round(data.estimation.resp.loc$Time,2))
 
 ```
+
+```{r, include=FALSE}
+
+
+data.discrimination.resp.loc <- read.csv("data/discrimination_dot_gaze.csv", sep="\t")
+data.discrimination.tracker <- read.csv("data/discrimination_tracker_data.csv", sep="\t")
+data.discrimination.tracker$trial_id <- floor((data.discrimination.tracker$trial_id - 1)/2)
+data.discrimination.resp.loc$trial_id <- data.discrimination.resp.loc$trial_id - 1
+
+length(unique(data.discrimination.tracker$trial_id))
+
+data.discrimination.resp.loc <- data.discrimination.resp.loc %>%
+                filter(belowX >= 0)
+trials <- (unique(data.discrimination.resp.loc$trial_id))
+data.discrimination.tracker <- data.discrimination.tracker %>%
+                group_by(trial_id) %>%
+                filter(trial_id %in% trials)
+
+
+data.discrimination.resp.loc$id <- seq.int(1, nrow(data.discrimination.resp.loc))
+data.discrimination.resp.loc$Score <- as.numeric(data.discrimination.resp.loc$Score) - 1
+
+
+
+data.discrimination.resp <- data.discrimination.resp.loc %>%
+            group_by(Trial, Time1, Time2, pid) %>%
+            mutate(cond=paste(round(Time1),round(Time2),sep="_")) %>%
+            top_n(n=1, wt=id)  %>%
+            group_by(Dots_Shown1, Dots_Shown2) %>%
+            mutate(ratio = (Dots_Shown1 - Dots_Shown2)/(Dots_Shown1**2 + Dots_Shown2**2) ** 0.5)  
+
+data.discrimination.resp$Dots_Counted <- data.discrimination.resp$Dots_Counted - 1
+head(data.discrimination.resp)
+
+data.discrimination.resp.vary <- subset(data.discrimination.resp, data.discrimination.resp$Time1 != data.discrimination.resp$Time2)
+
+
+data.discrimination.tracker <- data.discrimination.tracker %>%
+                  filter(ValidityLeft == 0 & ValidityRight == 0) %>%
+
+                mutate(av_x = (GazePointXLeft +GazePointXRight)/2) %>%
+                mutate(av_y = (GazePointYLeft +GazePointYRight)/2) %>%
+                group_by(trial_id) %>%
+                mutate(Time = round(max(TimeStamp)/100)/10)
+
+data.discrimination.tracker$id <- seq.int(1,nrow(data.discrimination.tracker))
+
+data.discrimination.resp.old <- cbind(data.discrimination.resp)
+```
+
 
 
 ```{r}
 
+data.discrimination.resp <- cbind(data.discrimination.resp.old)
+data.estimation.resp <- cbind(data.estimation.resp.old)
 
-p.1 <- ggplot() +
-          geom_point(data=data.resp.loc, aes(x=dl_x, y=dl_y, color=gazeDist), size=0.1, alpha=0.6) + 
+#data.discrimination.resp$Time <- as.factor(round(data.discrimination.resp$Time1,2))
+data.discrimination.resp$Score <- as.numeric(as.character(data.discrimination.resp$Score))
 
-          facet_wrap(~trial_id) +
-          coord_cartesian(xlim=c(0,1800), ylim=c(0,1000)) +
-          scale_color_gradient2(low="Blue", mid="Red",  high="Yellow",midpoint=1000)  
+data.estimation.resp$Time <- as.factor(round(data.estimation.resp$Time,2))
+
+data.discrimination.resp$cond <- plyr::mapvalues(data.discrimination.resp$cond, from = c("0_0", "0_1", "1_0", "1_1"), to = c("Short_Short", "Short_Long", "Long_Short", "Long_Long"))
 
 
-```
 
-```{r, fig.width=10, fig.height=5, results='asis'}
-
-  data.resp.avs <- data.resp.loc %>%
-                  filter(gazeDist > 0 & Dots_Shown < 100) %>%
+data.estimation.resp.avs <- data.estimation.resp.loc %>%
+                   group_by(Trial_End) %>%
+                  filter(Trial_End >= 1523639984) %>%
+                  filter(gazeDist > 0 & Dots_Shown < 150 & Dots_Shown >= 10) %>%
                   mutate(err=Dots_Counted - Dots_Shown) %>%
                   mutate(abs_err = abs(err)) %>%
-                  mutate(within_50 = gazeDist < 50) %>%
-                  group_by(trial_id) %>%
-                  mutate(within_50 = sum(within_50)) %>
-                  mutate(mean_dist=median(gazeDist)) %>%
+                  mutate(within_x = 1/(1 + exp(-0.1*belowX))) %>%
+                  group_by(trial_id) %>% 
+                  mutate(belowX = mean(belowX)) %>%
+                  mutate(within_x = mean(within_x)) %>%
+                  mutate(within_x_tot = sum(within_x)) %>%
+                  mutate(mean_dist=sum(gazeDist)/Dots_Shown) %>%
                   mutate(mean_abs_err = mean(abs_err)) %>%
-                  mutate(pct_err=mean_abs_err/Dots_Shown) %>%
+                  mutate(pct_err=err/Dots_Shown) %>%
+                  mutate(abs_pct_err=abs_err/Dots_Shown) %>%
                   top_n(n=1, wt=id) %>% 
-                  filter(mean_dist < 600)
+                  filter(abs_pct_err < 1.0) %>%
+                  filter(within_x > 0) 
+
+data.estimation.resp.avs$seen_shown_diff <- data.estimation.resp.avs$within_x_tot - data.estimation.resp.avs$Dots_Shown
+data.estimation.resp.avs$abs_seen_shown_diff <- abs(data.estimation.resp.avs$seen_shown_diff)
+data.estimation.resp.avs$seen_shown_rat <- (data.estimation.resp.avs$within_x_tot)/data.estimation.resp.avs$Dots_Shown
+data.estimation.resp.avs$abs_seen_shown_rat <- abs(data.estimation.resp.avs$seen_shown_rat)
+
+ 
 
 
-ggplot(data.resp.avs, aes(x=mean_dist, y=pct_err)) +
-        #geom_point() +
-        geom_point(aes(color=factor(Time))) +
-        stat_smooth(method="lm", aes(color=factor(Time)), se=FALSE) +
-        facet_wrap(~pid) +
-        xlab("Median Distance from Dot") +
-        ylab("")
-        
-
-ggplot(data.resp.avs, aes(x=factor(pid), y=mean_dist)) +
-      stat_summary(fun.data="mean_cl_boot")
-    
-
-ggplot(data.resp.avs, aes(x=factor(pid), y=pct_err)) +
-      stat_summary(fun.data="mean_cl_boot")
-    
-
-    
-
-```
-
-```{r, message=FALSE, echo=FALSE}
-
-
-few_dot <- subset(data.resp, data.resp$Dots_Shown < 75)
-
-
-p.1 <- ggplot(data=few_dot) +
-      geom_jitter(aes(x=Dots_Shown, y=err, color=factor(Time)), width=0.5, height=0.5)
-
-p.2 <- ggplot(data=few_dot) +
-      stat_summary(aes(x=factor(Time), y=err), fun.data="mean_cl_boot")
-
-p.2.1 <- ggplot(data=few_dot) +
-      stat_summary(aes(x=factor(Time), y=abs_err), fun.data="mean_cl_boot")
-
-p.3 <- ggplot(data=few_dot) +
-      stat_summary(aes(x=factor(Time), y=over), fun.data="mean_cl_boot")
-
-p.4 <- ggplot(data=subset(few_dot, few_dot$corr == 0), aes(x=Dots_Shown,   y=over, color=factor(Time))) +
-      binomial_smooth(se=FALSE) + 
-       ylab("P(over-estimate)")#+
-       #geom_jitter(width=1, height=0.1)
-
-p.5 <- ggplot(data=few_dot) +
-      geom_jitter(aes(x=Dots_Shown, y=abs_err, color=factor(Time)), width=0.5, height=0.5) +
-      stat_smooth(aes(x=Dots_Shown, y=abs_err, color=factor(Time)), method="loess", se=FALSE) 
-
-
-
-p.6 <- ggplot(data=few_dot, aes(x=Dots_Shown, y=Dots_Counted)) +
-        geom_jitter(aes(color=Time), alpha=0.7, width=1, height=1) +
-        geom_abline() +
-        coord_cartesian(xlim=c(0,max(few_dot$Dots_Shown)), ylim=c(0,max(few_dot$Dots_Shown))) +
+data.discrimination.resp.avs <- data.discrimination.resp.loc %>%
+                  group_by(Trial_End) %>%
+                  filter(Trial_End >= 1523639984) %>%
+                  filter(gazeDist > 0) %>%
+                  group_by(trial_id, which_array) %>%
+                  mutate(arr1 = (which_array==1)*1) %>%
+                  mutate(arr2 = (which_array==2)*1) %>%
+                  mutate(belowX1 = mean(belowX) * arr1) %>%
+                  mutate(belowX2 = mean(belowX) * arr2)%>%
+                  mutate(within_x1 =  sum(arr1/(1 + exp(-0.1*belowX)))) %>%
+                  mutate(within_x2 =  sum(arr2/(1 + exp(-0.1*belowX)))) %>%
+                  top_n(n=1, wt=id)%>%
+                  group_by(trial_id) %>%
+                  mutate(belowX1 = max(belowX1)) %>%
+                  mutate(belowX2 = max(belowX2)) %>%
+                  mutate(within_x1 = max(within_x1)) %>%
+                  mutate(within_x2=max(within_x2)) %>%
+                  top_n(n=1, wt=id) %>%
+                  mutate(cond=paste(round(Time1),round(Time2),sep="_")) %>%
+                  mutate(within_x_diff = (within_x1 - within_x2)) %>%
+                  mutate(within_x_log_diff = (log(within_x1) - log(within_x2)))  %>%
+                  mutate(abs_within_x_log_diff = abs(within_x_log_diff))  %>%
+      
+                  mutate(Dots_Counted = Dots_Counted - 1) %>%
+                  mutate(Dots_Ratio = (Dots_Shown1 - Dots_Shown2)/(Dots_Shown1**2 + Dots_Shown2**2)**0.5) %>%
+                  mutate(Abs_Dots_Ratio = abs(Dots_Ratio))
   
-        scale_color_gradient2(low="Black", mid="Blue",  high="Red",midpoint=0.2)   +
-        paper_theme
-
-
-p.1
-p.2
-p.2.1
-p.3
-p.4
-p.5
-p.6
 
 ```
 
 
-```{r, fig.width=14,fig.height=14}
+```{r, fig.width=7.5, fig.height=5}
+ ggplot(data.estimation.resp.avs, aes(x=abs_seen_shown_diff, y=abs_pct_err)) +
+        geom_point(aes(color=factor(Time)), alpha=0.35, size=2.) +
+        stat_smooth(method="loess", se=FALSE, span=1, size=1.5) +
+        xlab("Abs(Seen - Shown)") +
+        ylab("Absolute error") +
+           scale_color_discrete(name="Time") +
+        theme_light() +    paper_theme_3 + facet_wrap(~Subject, scales="free_y")
 
-
-ggplot(data=subset(data.tracker, data.tracker$Time==.1), aes(x=av_x, y=av_y)) +
-          geom_point(aes(color=TimeStamp)) +
-          facet_wrap(~trial_id) +
-   scale_color_gradient2(low="Blue", mid="Red",  high="Yellow",midpoint=250)  +
-        ggtitle("Eye-movements, 1 second")
-
-
-ggplot(data=subset(data.tracker, data.tracker$Time == .5), aes(x=av_x, y=av_y)) +
-          geom_point(aes(color=TimeStamp)) +
-          facet_wrap(~trial_id) + 
-        scale_color_gradient2(low="Blue", mid="Red",  high="Yellow",midpoint=1000)  +
-          ggtitle("Eye-movements, 5 seconds")
-
-
-ggplot(data=subset(data.tracker, data.tracker$Time == 2.5), aes(x=av_x, y=av_y)) +
-          geom_point(aes(color=TimeStamp)) +
-          facet_wrap(~trial_id) + 
-        scale_color_gradient2(low="Blue", mid="Red",  high="Yellow",midpoint=1000)  +
-          ggtitle("Eye-movements, 5 seconds")
-
-
-
-subs <- subset(data.tracker, data.tracker$id %% 5  == 0)
-subs <- subs %>%
-      
-      
-        mutate(av_x = 100 * round(av_x/100)) %>%
-          mutate(av_y = 100 * round(av_y/100))  %>%
-          filter()
-
-ggplot() +
-          #geom_point(data=subs, aes(x=dl_x, y=dl_y), size=0.25) +
-
-          geom_path(data=data.tracker, aes(x=av_x, y=av_y, color=TimeStamp), alpha=0.9) +
-          geom_point(data=data.resp.loc, aes(x=dl_x, y=dl_y), size=0.1, alpha=0.6) + 
-
-          facet_wrap(~trial_id) +
-          coord_cartesian(xlim=c(0,1800), ylim=c(0,1000)) +
-          scale_color_gradient2(low="Blue", mid="Red",  high="Yellow",midpoint=1000)  
-
-ggsave("figs/pilot_eye_moves.png", width=15, height=15)
-
-
-
-
-
+ ggplot(data.estimation.resp.avs, aes(x=within_x, y=abs_pct_err)) +
+        #geom_point(aes(color=factor(Time)), alpha=0.35, size=2.) +
+        stat_summary_bin(fun.data="mean_cl_boot", bins=11) +
+        stat_smooth(method="loess", se=TRUE, span=2, size=1.5) +
+        xlab("Seen - Shown") +
+        ylab("Error") +
+           scale_color_discrete(name="Time") + scale_x_continuous(limits=range(data.estimation.resp.avs$within_x)) +
+        theme_light() +    paper_theme_3 #+ facet_wrap(~Subject, scales="free_y")
 
 ```
 
